--- a/style/upload.html
+++ b/style/upload.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     <title>Upload Photo Page</title>
 </head>
 <body>
@@ -12,12 +13,19 @@
         <div>
          <h4>Publish your photos</h4>
          <div>
-         <img src="" alt="">
+         <img src="https://cdn.pixabay.com/photo/2015/12/22/04/00/photo-1103595_1280.png" alt="">
          <p>Drop your images here on Browse</p>
          </div>
 
          <div>
-
+         <ul>
+            <li>High quality photos (at least 5MP)</li>
+            <li>Photos are clear & original</li>
+            <li>Only upload photos you own the rights to</li>
+            <li>Zero tolerance for nudity, violence or hate</li>
+            <li>Respect the intellectual property of others</li>
+            <li>Read the Unsplash Terms</li>
+        </ul>
          </div>
 
         </div>
