Mod: add category tabs

--- a/toppage.html
+++ b/toppage.html
@@ -15,13 +15,13 @@
   <body>
     <div class="categories">
       <ul class="flex">
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-        <li>Four</li>
-        <li>Five</li>
-        <li>Six</li>
-        <li>Seven</li>
+        <li class="active"><a href="#">Wallpapers</a></li>
+        <li><a href="#">Textures & Patterns</a></li>
+        <li><a href="#">Nature</a></li>
+        <li><a href="#">Current Events</a></li>
+        <li><a href="#">Architecture</a></li>
+        <li><a href="#">Business & Work</a></li>
+        <li><a href="#">Film</a></li>
       </ul>
     </div>
     <div class="hero-image">
