edit files related like

--- a/like.html
+++ b/like.html
@@ -12,7 +12,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="likeHeader">
+    <div class="like">
+      <div class="back"><a href="#">&nbsp×</a></div>
+      <div class="likeHeader">
       <div class="accountIcon">
         <img src="imgs/icon.jpg" alt="" />
         <div class="accountInfo">
@@ -27,10 +29,15 @@
       </div>
     </div>
     <div class="likeContainer">
+      
       <div class="mainPic">
         <img src="imgs/collection1.jpg" alt="" />
-        <div class="info"></div>
-        <div class="buttonSet"></div>
+        <div class="info"><p>Obere Sandstraße, Bamberg, Deutschland</p>
+        <div class="buttonSet">
+          <button class="gray">Share</button>
+          <button class="gray">Info</button class="gray">
+        </div>
+      </div>
       </div>
       <div class="subPic">
         <img src="imgs/collection2.jpg" alt="" />
@@ -38,15 +45,19 @@
         <img src="imgs/collection4.jpg" alt="" />
       </div>
       <div class="relatedTags">
-        <p>Art Background</p>
-        <p>Poster</p>
-        <p>Mural</p>
-        <p>Painting</p>
-        <p>Art Background</p>
-        <p>Poster</p>
-        <p>Mural</p>
-        <p>Painting</p>
+        <h2>Related Tags</h2>
+        <div class="tags">
+        <p><a href="#">Art Background</a></p>
+        <p><a href="#">Poster</a></p>
+        <p><a href="#">Mural</a></p>
+        <p><a href="#">Painting</a></p>
+        <p><a href="#">Art Background</a></p>
+        <p><a href="#">Poster</a></p>
+        <p><a href="#">Mural</a></p>
+        <p><a href="#">Painting</a></p>
+      </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
