mobile style added

--- a/style/upload.html
+++ b/style/upload.html
@@ -13,7 +13,7 @@
 
     </header>
     <section id="uploadSection">
-        <h3>Publish your photos</h3>
+        <h3>Publish your photos	&#x1f389;</h3>
          <div class="uploadContainer">
          <div class="uploadItem1">
          <div>
