I hope it's final commit

--- a/like.html
+++ b/like.html
@@ -22,18 +22,28 @@
           <p>@AccountName</p>
         </div>
       </div>
-      <div class="buttonSet">
+      <div class="buttonSet forMobile">
+        <button class="gray">♡</button>
+        <button class="gray">＋</button>
+        <button class="colored">↓</button>
+      </div>
+      <div class="buttonSet forDesktop">
         <button class="gray">♡</button>
         <button class="gray">＋Collect</button>
         <button class="colored">Download free</button>
       </div>
+    
     </div>
     <div class="likeContainer">
       
       <div class="mainPic">
         <img src="imgs/collection1.jpg" alt="" />
         <div class="info"><p>Obere Sandstraße, Bamberg, Deutschland</p>
-        <div class="buttonSet">
+        <div class="buttonSet forMobile">
+          <button class="gray">↑</button>
+          <button class="gray">ℹ︎</button class="gray">
+        </div>
+        <div class="buttonSet  forDesktop">
           <button class="gray">Share</button>
           <button class="gray">Info</button class="gray">
         </div>
