add link to back

--- a/like.html
+++ b/like.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="like">
-      <div class="back"><a href="#">&nbsp×</a></div>
+      <div class="back"><a href="toppage.html">&nbsp×</a></div>
       <div class="likeHeader">
       <div class="accountIcon">
         <img src="imgs/icon.jpg" alt="" />
