Mod: main section

--- a/toppage.html
+++ b/toppage.html
@@ -24,6 +24,7 @@
         <li><a href="#">Film</a></li>
       </ul>
     </div>
+
     <div class="hero-image">
       <div class="hero-text">
         <h1>Unsplash</h1>
@@ -40,5 +41,370 @@
         </div>
       </div>
     </div>
+
+    <main>
+      <div class="container">
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/1.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/2.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/3.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/4.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/5.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/6.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/7.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/8.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/9.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/10.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/11.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/12.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/13.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/14.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div class="wrapper">
+          <figure>
+            <img src="./imgs/toppage/15.jpeg" alt="" />
+            <div class="wrapper-top">
+              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button">
+                <button><i class="fas fa-plus"></i> collect</button>
+              </div>
+            </div>
+            <div class="wrapper-bottom">
+              <div class="user">
+                <a href="#">
+                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
+                  <p>User Name</p>
+                </a>
+              </div>
+              <div class="download">
+                <div class="button">
+                  <button><i class="fas fa-long-arrow-alt-down"></i></button>
+                </div>
+              </div>
+            </div>
+          </figure>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
