--- a/accountpage.html
+++ b/accountpage.html
@@ -55,8 +55,8 @@
 
 
     <div class="wrapper">
-      <div class="box a"><a href="liked.html"><img src="./imgs/account/photo-1.jpg" alt="" class="account_art"></a></div>
-      <div class="box b"><a href="liked.html"></a><img src="./imgs/account/photo-3.jpg" alt=""class="account_art"></a></div>
+      <div class="box a"><a href="liked.html"></a><img src="./imgs/account/photo-6.jpg"alt="" class="account_art"></a></div>
+      <div class="box b"><a href="liked.html"></a><img src="./imgs/account/photo-2.jpg" alt=""class="account_art"></a></div>
       <div class="box c"><a href="liked.html"></a><img src="./imgs/account/photo2.jpg" alt=""class="account_art"></a></div>
       <div class="box d"><a href="liked.html"></a><img src="./imgs/account/photo-4.jpg" alt=""class="account_art"></a></div>
       <div class="box e"><a href="liked.html"></a><img src="./imgs/account/photo-5.jpg" alt=""class="account_art"></a></div>
@@ -73,6 +73,5 @@
       <i class="fas fa-boxes fa-3x"></i><br>
       <div class="footer_message">Make something awesome</div>
     </footer>
-
   </body>
-  </html>
+</html>
