--- a/collection.html
+++ b/collection.html
@@ -5,27 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
     <title>Collection</title>
 </head>
 <body>
     <header>
 
     </header>
-    <div class="page_title">
-        <h1>Collections</h1>
-        <p>Beautiful, free pictures of the week.
-            Explore the world through collections of 
-            beautiful HD pictures free to use under the <a fref="#">Unsplash License.</a></p>
-    </div>
-    <div class="photo_collection">
-        <div class="photos">lorem</div>
-        <div>lorem</div>
-        <div>lorem</div>
-        <h2>Iranians</h2>
-        <p>1005 photos · Curated by Ashkan Forouzani</p>
-        <div>lorem</div>
-        <div>lorem</div>
-        <div>lorem</div>
-    </div>
+    <section class="page_title_wrap">
+        <div class="page_title">
+            <h1>Collections</h1>
+            <p>Beautiful, free pictures of the week.<br>
+                Explore the world through collections of 
+                beautiful HD pictures free to use under the <a href="#">Unsplash License.</a></p>
+        </div>
+    </section>
+    <section class="photo_cpllection_wrap">
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection1_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection2_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection3_1.jpg"></a></div>
+            <h2>Iranians</h2>
+            <p>1005 photos · Curated by Ashkan Forouzani</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Iranian</div></a>
+                <a href="#"><div class="category">Iran</div></a>
+                <a href="#"><div class="category">Women Images</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection4_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection5_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection6_1.jpg"></a></div>
+            <h2>Festive moments with friends</h2>
+            <p>45 photos · Curated by Unsplash Trends</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Friend</div></a>
+                <a href="#"><div class="category">Festive</div></a>
+                <a href="#"><div class="category">Christmas Images</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection7_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection8_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection9_1.jpg"></a></div>
+            <h2>Festive with blank space</h2>
+            <p>50 photos · Curated by Unsplash Trends</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Space Images</div></a>
+                <a href="#"><div class="category">Festive</div></a>
+                <a href="#"><div class="category">HD Holiday Wallpapers</div></a>
+            </div>
+        </div>
+    </section>
+    <section class="photo_cpllection_wrap">
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection10_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection11_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection12_1.jpg"></a></div>
+            <h2>The Upside Down</h2>
+            <p>24 photos · Curated by Hello I'm Nik 🇬🇧</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Upside Down</div></a>
+                <a href="#"><div class="category">Reflection</div></a>
+                <a href="#"><div class="category">Building</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection13_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection14_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection15_1.jpg"></a></div>
+            <h2>Insert Coin(s)</h2>
+            <p>27 photos · Curated by Hello I'm Nik 🇬🇧</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Game</div></a>
+                <a href="#"><div class="category">Gaming</div></a>
+                <a href="#"><div class="category">Electronic</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection16_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection17_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection18_1.jpg"></a></div>
+            <h2>Happiness</h2>
+            <p>85 photos · Curated by Angie Muldowney</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Happiness</div></a>
+                <a href="#"><div class="category">Hand</div></a>
+                <a href="#"><div class="category">Women Images</div></a>
+            </div>
+        </div>
+    </section>
+    <section class="photo_cpllection_wrap">
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection19_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection20_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection21_1.jpg"></a></div>
+            <h2>Jack Frost (Snow and Ice)</h2>
+            <p>53 photos · Curated by Marsha Wilde</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Frost</div></a>
+                <a href="#"><div class="category">HD Snow Wallpapers</div></a>
+                <a href="#"><div class="category">Winter Images</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection22_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection23_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection24_1.jpg"></a></div>
+            <h2>Earth Tones</h2>
+            <p>92 photos · Curated by Andrew Neel</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">Wood Backgrounds</div></a>
+                <a href="#"><div class="category">Interior</div></a>
+                <a href="#"><div class="category">HD White Wallpapers</div></a>
+            </div>
+        </div>
+        <div class="photo_collection">
+            <div class="photo_b"><a href="#"><img src="imgs/collection25_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection26_1.jpg"></a></div>
+            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection27_1.jpg"></a></div>
+            <h2>Fun with Fall (Thanksgiving, Autumn)</h2>
+            <p>130 photos · Curated by Christi Osterday</p>
+            <div class="category_wrap">
+                <a href="#"><div class="category">HD Autumn Wallpapers</div></a>
+                <a href="#"><div class="category">Fall Images</div></a>
+                <a href="#"><div class="category">Animals Images</div></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
