--- a/upload.html
+++ b/upload.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="style/main.css">
     <title>Upload Photo Page</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
          <div class="uploadContainer">
          <div class="uploadItem1">
          <div>
-         <img src="uploadIcon.png" alt="" width="150px">
+         <img src="imgs/uploadIcon.png" alt="" width="150px">
 
          <p class="Lt">Drop your images here or <a href="">Browse</a></p>
          <p class="Mb">Add your photos here</p>
