back button added

--- a/upload.html
+++ b/upload.html
@@ -14,6 +14,7 @@
     </header>
     <section id="uploadSection">
         <h3>Publish your photos	&#x1f389;</h3>
+        <div class="back"><a href="toppage.html">&nbsp×</a></div>
          <div class="uploadContainer">
          <div class="uploadItem1">
          <div>
